# manifestoo-core

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  HISTORY.rst  README.md  mk_core_addons  pyproject.toml  tox.ini
.github/workflows/: ci.yml  release.yml  update-core-addons.yml
docs/: api.md  conf.py  develop.md  index.md
news/: +ebfef9ef.feature.rst  .feature  10.feature  102.feature  105.bugfix  110.feature  42.feature  44.feature  50.feature  52.feature  53.feature  56.feature  57.feature  58.feature  6.doc  63.bugfix  7.feature  75.misc  79.feature.md  81.feature  9.feature  97.feature
src/manifestoo_core/: addon.py  addons_set.py  exceptions.py  git_postversion.py  manifest.py  metadata.py  odoo_series.py
src/manifestoo_core/core_addons/: __init__.py  addons-10.0-c.txt  addons-10.0-e.txt  addons-11.0-c.txt  addons-11.0-e.txt  addons-12.0-c.txt  addons-12.0-e.txt  addons-13.0-c.txt  addons-13.0-e.txt  addons-14.0-c.txt  addons-14.0-e.txt  addons-15.0-c.txt  addons-15.0-e.txt  addons-16.0-c.txt  addons-16.0-e.txt  addons-17.0-c.txt  addons-17.0-e.txt  addons-18.0-c.txt  addons-18.0-e.txt  addons-19.0-c.txt  addons-19.0-e.txt  addons-8.0-c.txt  addons-9.0-c.txt  addons-9.0-e.txt
tests/: common.py  test_addon.py  test_addons_set.py  test_core_addons.py  test_manifest.py  test_metadata.py  test_odoo_series.py
