[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "manifestoo_core"
description = "A library to reason about Odoo addons manifests"
authors = [
  {name = "Stéphane Bidoul", email = "stephane.bidoul@acsone.eu"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Odoo",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
readme = "README.md"
dependencies = [
    "importlib_resources ; python_version<'3.7'",
    "typing-extensions ; python_version < '3.8'",
]
requires-python = ">=3.6"
dynamic = ["version"]

[project.optional-dependencies]
metadata = [
    "setuptools-odoo>=3.1",
]
test = [
    "pytest",
    "coverage[toml]",
    "pkg-metadata",
]
doc = [
    "sphinx",
    "furo",
    "myst-parser",
    # towncrier pinned because of
    # https://github.com/sphinx-contrib/sphinxcontrib-towncrier/issues/60
    "towncrier<22.8",
    "sphinxcontrib-towncrier",
]

[project.urls]
Homepage = "https://github.com/sbidoul/manifestoo-core"
Documentation = "https://manifestoo-core.readthedocs.io/en/stable/"
Changelog = "https://manifestoo-core.readthedocs.io/en/stable/changelog.html"
Source = "https://github.com/sbidoul/manifestoo-core"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build]
exclude = [
    "/.github",
]

[tool.ruff]
fix = false
select = [
    "ALL",
]
ignore = [
    "ANN101", # Missing type annotation for `self` in method
    "ANN102", # Missing type annotation for `cls` in classmethod
    "ANN401", # Dynamically typed expressions (typing.Any) are disallowed in `value`
    "D",      # Docstring issues
    "C408",   # Unnecessary `dict` call (rewrite as a literal)
    "FBT001", # Boolean positional arg in function definition
    "FBT002", # Boolean default value in function definition
    "PD",     # pandas-vet
    "S101",   # Use of `assert` detected
    "TID252", # Relative imports from parent modules are banned
    "UP006",  # Use `dict` instead of `Dict` for type annotations (py 3.9+)
    "UP007",  # Use `X | Y` for type annotations, (py 3.10+)
    "UP011",  # Unnecessary parameters to `functools.lru_cache` (py 3.8+)
]
exclude = [
    "docs/conf.py",
]

[tool.ruff.isort]
known-first-party = ["manifestoo_core"]


[tool.coverage.run]
branch = true
source_pkgs = ["manifestoo_core"]

[tool.coverage.paths]
source = ["src", ".tox/*/site-packages"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
]


[tool.towncrier]
package = "manifestoo_core"
package_dir = "src"
filename = "HISTORY.rst"
directory = "news"
issue_format = "`#{issue} <https://github.com/sbidoul/manifestoo-core/issues/{issue}>`_"
title_format = "{version} ({project_date})"
